# ayaya_gui

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg_rf.txt
ayaya_gui/: CMakeLists.txt  ayaya_gui.cpp  main.cpp
ayaya_gui/include/: app.h  window.h
ayaya_gui/include/paint/: canvas.h  color.h  context.h  key.h  path.h  point.h  rect.h  utils.h
ayaya_gui/include/widget/: basic.h  composite.h  layer.h  ref.h  widget.h
ayaya_gui/src/: app.cpp  window.cpp
ayaya_gui/src/paint/: canvas.cpp  rect.cpp
ayaya_gui/src/widget/: basic.cpp  composite.cpp  layer.cpp  widget.cpp
test/: CMakeLists.txt  ayaya_gui.cpp  ayaya_gui.h
